--- a/products/equipment/toolschemical.html
+++ b/products/equipment/toolschemical.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="page_title">อุปกรณ์ห้องแล็บ | Baume Chemical</title>
   <meta name="description" content="รายการอุปกรณ์และวัสดุสำหรับห้องแล็บงานชุบโลหะ: บีกเกอร์ บิวเรต ขวดหยด ที่ตั้งหลอดทดลอง ฯลฯ (TH/EN).">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="https://www.baumechemical.com/products/equipment/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/equipment/toolschemical.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -21,7 +21,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Lab Equipment • Beakers • Burettes • Stands">
   <meta property="og:description" content="Clean bilingual list for plating labs (EN/TH).">
-  <meta property="og:url" content="https://www.baumechemical.com/products/equipment/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/equipment/toolschemical.html">
   <meta property="og:image" content="https://i.imgur.com/wl25FWQ.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
