--- a/products/platingcoating/cyanide-free-white-bronze/index.html
+++ b/products/platingcoating/cyanide-free-white-bronze/index.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="page_title">317M ไวท์บรอนซ์ (ปราศจากไซยาไนด์) | Baume Chemical</title>
   <meta name="description" content="กระบวนการชุบไวท์บรอนซ์สีเงินสว่าง ปราศจากไซยาไนด์ 317M: สูตรผสม องค์ประกอบบ่อชุบ ช่วงการทำงาน (Rack/Barrel) อุปกรณ์แนะนำ และการแก้ปัญหา (TH/EN).">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="https://www.baumechemical.com/products/317m-white-bronze/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/cyanide-free-white-bronze/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -23,7 +23,7 @@
   <meta property="og:locale:alternate" content="en_US">
   <meta property="og:title" content="317M Cyanide-Free White Bronze • Bright, Hard, Wear-Resistant">
   <meta property="og:description" content="Bath compositions, operating window (rack/barrel), equipment & troubleshooting in TH/EN.">
-  <meta property="og:url" content="https://www.baumechemical.com/products/317m-white-bronze/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/cyanide-free-white-bronze/index.html">
   <meta property="og:image" content="https://img2.pic.in.th/pic/image0-22a7d2870f1bc4f83.jpeg">
   <meta property="og:image:alt" content="Cyanide-free white bronze plating with bright silver finish">
   <meta name="twitter:card" content="summary_large_image">
