--- a/products/equipment/platingequipment.html
+++ b/products/equipment/platingequipment.html
@@ -8,7 +8,7 @@
   <title data-i18n-key="page_title">อุปกรณ์งานชุบ (Plating Tools) | Baume Chemical</title>
   <meta name="description" content="อุปกรณ์สำหรับกระบวนการชุบโลหะ: Barrel/Rack Tank, Rectifier, Ultra Filtration, Ultrasonic, Heater/Chiller, Centrifugal Dryer — เค้าโครงเดียวกับหน้าอื่นๆ ของ Baume (TH/EN).">
   <meta name="robots" content="index,follow,max-image-preview:large">
-  <link rel="canonical" href="https://www.baumechemical.com/products/equipment/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/equipment/platingequipment.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -21,7 +21,7 @@
   <meta property="og:site_name" content="Baume Chemical">
   <meta property="og:title" content="Plating Tools • Baume Chemical">
   <meta property="og:description" content="Barrel & Rack tanks, rectifier, UF, ultrasonic, heaters/chiller, centrifugal dryer (TH/EN).">
-  <meta property="og:url" content="https://www.baumechemical.com/products/equipment/">
+  <meta property="og:url" content="https://www.baumechemical.com/products/equipment/platingequipment.html">
   <meta property="og:image" content="https://i.imgur.com/R7gYwSN.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
