upload all files

--- a/404.html
+++ b/404.html
@@ -165,17 +165,17 @@
     <section class="card">
       <h2 data-i18n-key="popular_h">ลิงก์ยอดนิยม</h2>
       <ul class="list" id="popularLinks">
-        <li><a href="/products/pretreatment/" data-i18n-key="l_pretreat">Pretreatment</a></li>
-        <li><a href="/products/protective/" data-i18n-key="l_protect">Protective Treatment & Anti-tarnish</a></li>
-        <li><a href="/blog/anti-tarnish-selection/" data-i18n-key="l_at_blog">คู่มือเลือกสารกันหมอง (Anti-tarnish)</a></li>
-        <li><a href="/blog/salt-spray-quick-guide/" data-i18n-key="l_salt">Salt Spray — Quick Guide</a></li>
-        <li><a href="/contact-us.html" data-i18n-key="l_contact">ติดต่อเรา</a></li>
+        <li><a href="https://www.baumechemical.com/products/pretreatment/" data-i18n-key="l_pretreat">Pretreatment</a></li>
+        <li><a href="https://www.baumechemical.com/products/protective/" data-i18n-key="l_protect">Protective Treatment & Anti-tarnish</a></li>
+        <li><a href="https://www.baumechemical.com/blog/anti-tarnish-selection/" data-i18n-key="l_at_blog">คู่มือเลือกสารกันหมอง (Anti-tarnish)</a></li>
+        <li><a href="https://www.baumechemical.com/blog/salt-spray-quick-guide/" data-i18n-key="l_salt">Salt Spray — Quick Guide</a></li>
+        <li><a href="https://www.baumechemical.com/contact-us.html" data-i18n-key="l_contact">ติดต่อเรา</a></li>
       </ul>
       <div class="chip-row" id="quickChips">
-        <a class="chip" href="/products/blackening/" data-i18n-key="c_black">Blackening</a>
-        <a class="chip" href="/products/passivation/" data-i18n-key="c_pass">Passivation</a>
-        <a class="chip" href="/products/polishing/" data-i18n-key="c_polish">Polishing</a>
-        <a class="chip" href="/products/platingcoating/" data-i18n-key="c_plating">Plating</a>
+        <a class="chip" href="https://www.baumechemical.com/products/blackening/" data-i18n-key="c_black">Blackening</a>
+        <a class="chip" href="https://www.baumechemical.com/products/passivation/" data-i18n-key="c_pass">Passivation</a>
+        <a class="chip" href="https://www.baumechemical.com/products/polishing/" data-i18n-key="c_polish">Polishing</a>
+        <a class="chip" href="https://www.baumechemical.com/products/platingcoating/" data-i18n-key="c_plating">Plating</a>
       </div>
     </section>
 
@@ -188,7 +188,7 @@
         <li>📞 : <a href="tel:+66925469887">+66 92 546 9887</a></li>
       </ul>
       <div class="chip-row">
-        <a class="chip" href="/sitemap.xml" data-i18n-key="sitemap">Sitemap</a>
+        <a class="chip" href="https://www.baumechemical.com/contact-us.html" data-i18n-key="Contact">Contact</a>
         <a class="chip" href="mailto:contact@baumechemical.com?subject=Broken%20link%20report&body=I%20found%20a%20broken%20link%20on:%20" data-i18n-key="report">รายงานลิงก์เสีย</a>
       </div>
     </section>
@@ -211,14 +211,14 @@
         <nav aria-label="หมวดหมู่ผลิตภัณฑ์">
           <h3 class="footer-title" data-i18n-key="footer_products">หมวดผลิตภัณฑ์</h3>
           <ul class="footer-list">
-            <li><a href="/products/pretreatment/">Pretreatment</a></li>
-            <li><a href="/products/platingcoating/">Plating</a></li>
-            <li><a href="/products/blackening/">Blackening</a></li>
-            <li><a href="/products/passivation/">Passivation</a></li>
-            <li><a href="/products/polishing/">Polishing</a></li>
-            <li><a href="/products/strippers/">Strippers</a></li>
-            <li><a href="/products/protective/">Protective Treatment</a></li>
-            <li><a href="/products/equipment/">Equipment</a></li>
+            <li><a href="https://www.baumechemical.com/products/pretreatment/">Pretreatment</a></li>
+            <li><a href="https://www.baumechemical.com/products/platingcoating/">Plating</a></li>
+            <li><a href="https://www.baumechemical.com/products/blackening/">Blackening</a></li>
+            <li><a href="https://www.baumechemical.com/products/passivation/">Passivation</a></li>
+            <li><a href="https://www.baumechemical.com/products/polishing/">Polishing</a></li>
+            <li><a href="https://www.baumechemical.com/products/strippers/">Strippers</a></li>
+            <li><a href="https://www.baumechemical.com/products/protective/">Protective Treatment</a></li>
+            <li><a href="https://www.baumechemical.com/products/equipment/">Equipment</a></li>
           </ul>
         </nav>
 
