upload all files

--- a/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html
@@ -30,18 +30,34 @@
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- JSON-LD Product -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Product",
-    "name":"BRIGHTNER ZINC 111B",
-    "description":"Cyanide zinc brightener providing high gloss from low to high current density with low organics; rack & barrel ready.",
-    "brand":{"@type":"Brand","name":"Baume Chemical"},
-    "category":"Zinc Plating Brightener (Cyanide)",
-    "image":"https://img5.pic.in.th/file/secure-sv1/thumbnail-8.jpg",
-    "inLanguage":"th"
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "BRIGHTNER ZINC 111B",
+  "description": "Cyanide zinc brightener providing high gloss from low to high current density with low organics; rack & barrel ready.",
+  "image": "https://img5.pic.in.th/file/secure/si/thumbnail-8.jpg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Zinc Plating Brightener (Cyanide)",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingcyanidezinc/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "10"
   }
-  </script>
+}
+</script>
+
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
