upload all files

--- a/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
@@ -31,9 +31,34 @@
   <meta name="twitter:description" content="High-luster ammonium acid zinc system for rack & barrel; strong LCD throw, easy rinsing, heat-tolerant, chromate-friendly.">
 
   <!-- JSON-LD Product -->
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"Product","name":"ACIDZINC 99","description":"Ammonium acid zinc system with high gloss, strong LCD coverage, easy rinsing, heat-tolerant; for rack & barrel.","brand":{"@type":"Brand","name":"Baume Chemical"},"category":"Zinc Plating (Acid, Ammonium)","image":"https://i.imgur.com/j7SpCDD.jpeg","inLanguage":"th"}
-  </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "ACIDZINC 99",
+  "description": "Ammonium acid zinc system with high gloss, strong LCD coverage, easy rinsing, heat tolerant; for rack & barrel.",
+  "image": "https://i.imgur.com/7SpCDD.jpeg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Zinc Plating (Acid, Ammonium)",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingacidzinc/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "8"
+  }
+}
+</script>
+
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
