--- a/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html
@@ -30,18 +30,33 @@
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- JSON-LD Product -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Product",
-    "name":"MILLENIUM NCZ 1221",
-    "description":"Non-Cyanide Alkaline Zinc plating solution for rack & barrel lines.",
-    "brand":{"@type":"Brand","name":"Baume Chemical"},
-    "category":"Zinc Plating (Non-Cyanide Alkaline)",
-    "image":"https://img2.pic.in.th/pic/thumbnail-7.jpg",
-    "inLanguage":"th"
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "MILLENIUM NCZ 1221",
+  "description": "Non-Cyanide Alkaline Zinc plating solution for rack & barrel lines.",
+  "image": "https://img2.pic.in.th/file/thumbnail-7.jpg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Zinc Plating (Non-Cyanide Alkaline)",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/zincplating/troubleshootingnoncyanidezinc/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "7"
   }
-  </script>
+}
+</script>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
