upload all files

--- a/products/platingcoating/nickelplating/troubleshootingennickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingennickel/index.html
@@ -31,6 +31,34 @@
   <meta name="twitter:title" id="twTitle" content="KEMTEK NI-508 • Electroless Nickel (Mid-P)">
   <meta name="twitter:description" id="twDesc" content="Stable Mid-P EN with ~13–20 µm/h rate; bright, hard, corrosion-resistant.">
 
+          <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "KEMTEK NI-508 • ชุบนิกเกิลไม่ใช้ไฟฟ้า (ฟอสฟอรัสปานกลาง)",
+  "description": "กระบวนการ EN (Mid-P ≥7%P) เสถียร เงาสูง แข็ง/ทนสึกหรอ อัตราการสะสม ~13–20 µm/h ใช้ได้ทั้งถังแขวนและถังกลิ้ง พร้อมสเปก/สูตรผสม/การดูแลครบ",
+  "image": "https://i.imgur.com/j7SpCDD.jpeg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Electroless Nickel plating",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingennickel/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "10"
+  }
+}
+</script>
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
