--- a/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html
+++ b/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html
@@ -31,6 +31,34 @@
   <meta name="twitter:title" id="twTitle" content="Decorex Conducting Salt • Chrome Recess Enhancer (Powder)">
   <meta name="twitter:description" id="twDesc" content="Improve LCD coverage/brightness—suitable for hard and decorative chrome.">
 
+        <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "Decorex Conducting Salt • ยาเร่งซอกโครเมี่ยม (ชนิดผง)",
+  "description": "ผงเร่งซอกสำหรับฮาร์ดโครมและโครเมี่ยมเงา เพิ่มการเข้าซอก/กระแสต่ำ ช่วยให้ความหนาและความเงาใน LCD ใกล้เคียง HCD ใช้งานและบำรุงรักษาง่าย",
+  "image": "https://i.imgur.com/j7SpCDD.jpeg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Chrome plating",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootinghardchrome/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "10"
+  }
+}
+</script>
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
