--- a/products/platingcoating/nickelplating/troubleshootingnickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickel/index.html
@@ -31,6 +31,34 @@
   <meta name="twitter:title" id="twTitle" content="Nickel A-Brite • Bright Nickel">
   <meta name="twitter:description" id="twDesc" content="High gloss, strong leveling, LCD coverage, chrome-ready.">
 
+      <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "Nickel A-Brite • Bright Nickel",
+  "description": "สำหรับงานชุบนิเกิ้ลทั้งถังกลิ้งและถังแขวน เงาสูง กลบรอยทรายดี ครอบคลุมซอกมุม และรองรับโครเมียมได้ยอดเยี่ยม",
+  "image": "https://i.imgur.com/j7SpCDD.jpeg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Bright Nickel",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickel/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "10"
+  }
+}
+</script>
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
