--- a/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html
@@ -31,6 +31,34 @@
   <meta name="twitter:title" id="twTitle" content="Nickel Satin SM • Satin Nickel System">
   <meta name="twitter:description" id="twDesc" content="Adjustable matte level, smooth satin grain, wide current range, chrome-ready.">
 
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "Nickel Satin SM • น้ำยาชุบนิเกิ้ลซาติน",
+  "description": "ชุดน้ำยาซาตินนิเกิ้ล (Satin Nickel) สำหรับงาน Rack/Barrel ปรับระดับความด้านได้ ผิวเนียนสม่ำเสมอ ครอบคลุมซอกมุมดี รองรับโครเมี่ยม พร้อมสเปก/สูตรผสม",
+  "image": "https://i.imgur.com/j7SpCDD.jpeg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Satin Nickel System",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "10"
+  }
+}
+</script>
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
