--- a/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
@@ -30,19 +30,33 @@
   <meta name="twitter:title" id="twTitle" content="BLACK NICKEL SALT • Black Nickel Plating Salt | Baume Chemical" />
   <meta name="twitter:description" id="twDesc" content="Deep, glossy black finish. Works on brass or over bright-nickel. Low voltage, wide window. Optional lacquer topcoat." />
 
-  <!-- JSON-LD Product -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"Product",
-    "name":"BLACK NICKEL SALT",
-    "description":"Black nickel plating salt for a deep, glossy, uniform black finish. Suited for brass and parts pre-plated with bright nickel; optional lacquer topcoat.",
-    "brand":{"@type":"Brand","name":"Baume Chemical"},
-    "category":"Nickel Plating (Black Nickel)",
-    "image":"https://i.imgur.com/j7SpCDD.jpeg",
-    "inLanguage":"th"
+          <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "BLACK NICKEL SALT • เกลือนิเกิ้ลดำ",
+  "description": "เกลือนิเกิ้ลดำสำหรับผสมน้ำยาชุบนิเกิ้ลดำ ให้ผิวดำเงาสม่ำเสมอ ใช้ได้กับทองเหลือง/งานชุบนิเกิ้ลเงา เหมาะกับชิ้นส่วนกล้อง แว่นตา อิเล็กทรอนิกส์ และจิวเวลรี่",
+  "image": "https://i.imgur.com/j7SpCDD.jpeg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Black nickel plating",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "10"
   }
-  </script>
+}
+</script>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
