upload all files

--- a/products/platingcoating/copperplating/troubleshootingacidcopper/index.html
+++ b/products/platingcoating/copperplating/troubleshootingacidcopper/index.html
@@ -29,6 +29,34 @@
   <meta name="twitter:title" id="twTitle" content="CopperBrite 900 • Acid Copper Bright">
   <meta name="twitter:description" id="twDesc" content="High brightness & leveling, low-stress deposit, easy bath control.">
 
+      <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "น้ำยาชุบทองแดงกรดเงา (CopperBrite 900)",
+  "description": "Bright acid copper: high brightness & leveling, low-stress deposits, easy control. เงาสูง เครียดต่ำ ยึดเกาะดี เข้าซอกเยี่ยม ควบคุมง่าย",
+  "image": "https://img5.pic.in.th/file/secure-sv1/thumbnail-2240c35936a6eea27.jpg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Copper Plating",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingacidcopper/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "15"
+  }
+}
+</script>
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
