--- a/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
@@ -29,6 +29,34 @@
   <meta name="twitter:title" id="twTitle" content="Cyanide Copper • Alkaline Copper Plating" />
   <meta name="twitter:description" id="twDesc" content="Uniform, adherent deposit with strong throwing power—simple control." />
 
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "Cyanide Copper • น้ำยาชุบทองแดงด่าง",
+  "description": "ระบบชุบทองแดงไซยาไนด์ (อัลคาไลน์) สำหรับเหล็ก/ทองเหลือง/ซิงค์ไดคาสต์ ให้ผิวสม่ำเสมอ เกาะดี ครอบคลุมซอกมุม คุมง่าย รองรับนิเกิ้ลต่อ",
+  "image": "https://img5.pic.in.th/file/secure-sv1/thumbnail-2240c35936a6eea27.jpg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Copper Plating",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "15"
+  }
+}
+</script>
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
