--- a/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html
@@ -29,6 +29,34 @@
   <meta name="twitter:title" id="twTitle" content="Copperlume 220 • Alkaline Copper (Cyanide-Free)" />
   <meta name="twitter:description" id="twDesc" content="Semi-bright to bright, cyanide-free copper—great adhesion & coverage; easy to run." />
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "น้ำยาชุบทองแดงด่างปลอดไซยาไนด์ (Copperlume 220)",
+  "description": "น้ำยาชุบทองแดงด่างปลอดไซยาไนด์ (Copperlume 220) ผิวกึ่งเงา–เงา เกาะดี เข้าซอกเยี่ยม ใช้งานง่ายสำหรับเหล็ก/ทองเหลือง/ซิงค์ไดคาสต์/บรอนซ์/อะลูมิเนียมชุบสังกะสี",
+  "image": "https://img5.pic.in.th/file/secure-sv1/thumbnail-2240c35936a6eea27.jpg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Copper Plating",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/copperplating/troubleshootingcoppernon-cyanide/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "15"
+  }
+}
+</script>
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
