--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html
@@ -29,6 +29,34 @@
   <meta name="twitter:title" id="twTitle" content="LT 3405 Polyurethane E-coat • Clear, Hard, Chemical-Resistant" />
   <meta name="twitter:description" id="twDesc" content="Operating window, make-up, curing, maintenance & troubleshooting in TH/EN." />
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "LT 3405 โพลียูรีเทน แลคเกอร์ไฟฟ้า",
+  "description": "LT 3405 โพลียูรีเทนแลคเกอร์ไฟฟ้า (Polyurethane E-coat) ฟิล์มใส แข็ง ทนสารเคมี/ความชื้น สเปกการทำงาน วิธีผสม อบ บำรุงรักษา และการแก้ปัญหา",
+  "image": "https://i.imgur.com/j7SpCDD.jpeg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Polyurethane electrophoretic clear coat",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquerpolyurethane/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "10"
+  }
+}
+</script>
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
