--- a/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
+++ b/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html
@@ -29,6 +29,34 @@
   <meta name="twitter:title" id="twTitle" content="EPA 2020 & Water Lacquer 2200 • Clear Protective Coats" />
   <meta name="twitter:description" id="twDesc" content="E-coat and water-based clear coats — specs, make-up, curing & troubleshooting." />
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "EPA 2020 แลคเกอร์ไฟฟ้า & แลคเกอร์น้ำ 2200",
+  "description": "LT 3405 โพลียูรีเทนแลคเกอร์ไฟฟ้า (Polyurethane E-coat) ฟิล์มใส แข็ง ทนสารเคมี/ความชื้น สเปกการทำงาน วิธีผสม อบ บำรุงรักษา และการแก้ปัญหา",
+  "image": "https://img5.pic.in.th/file/secure-sv1/image0-174d2122a9ed67635.jpeg",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Clear lacquer coating",
+  "inLanguage": "th",
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/electrophoreticlacquer/troubleshootingelectrophoreticlacquer/index.html",
+    "priceCurrency": "THB",
+    "price": "0.00",
+    "availability": "https://schema.org/InStock"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "10"
+  }
+}
+</script>
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
