upload all files

--- a/products/index.html
+++ b/products/index.html
@@ -319,6 +319,7 @@
           <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
           <li><a href="https://www.baumechemical.com/products.html" class="nav-link">Products</a></li>
           <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
+          <li><a href="https://www.baumechemical.com/blog/index.html" class="nav-link">Blog</a></li>
         </ul>
       </nav>
 
