--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
           <li><a href="about-us.html" class="nav-link">About us</a></li>
           <li><a href="products.html" class="nav-link">Products</a></li>
           <li><a href="contact-us.html" class="nav-link">Contact Us</a></li>
+          <li><a href="blog/index.html" class="nav-link">Blog</a></li>
         </ul>
       </nav>
 
