--- a/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickelsatin/index.html
@@ -262,10 +262,10 @@ body.no-scroll{ position:fixed; width:100% }
       <div class="header-right">
         <nav class="primary-nav" aria-label="Primary">
           <ul class="menu">
-            <li><a href="https://www.baumechemical.com/index.html" class="nav-link" data-i18n-key="nav_home">Home</a></li>
-            <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link" data-i18n-key="nav_about">About Us</a></li>
-            <li><a href="https://www.baumechemical.com/products.html" class="nav-link" data-i18n-key="nav_products">Products</a></li>
-            <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link" data-i18n-key="nav_contact">Contact Us</a></li>
+            <li><a href="https://www.baumechemical.com/index.html" class="nav-link">Home</a></li>
+            <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
+            <li><a href="https://www.baumechemical.com/products.html" class="nav-link" aria-current="page">Products</a></li>
+            <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
             <li><a href="https://www.baumechemical.com/blog/index.html" class="nav-link" data-i18n-key="nav_contact">Blog</a></li>
 
             <!-- Mobile language row -->
