--- a/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
+++ b/products/platingcoating/zincplating/troubleshootingacidzinc/index.html
@@ -228,6 +228,7 @@
             <li><a href="https://www.baumechemical.com/about-us.html" class="nav-link">About us</a></li>
             <li><a href="https://www.baumechemical.com/products.html" class="nav-link" aria-current="page">Products</a></li>
             <li><a href="https://www.baumechemical.com/contact-us.html" class="nav-link">Contact Us</a></li>
+            <li><a href="https://www.baumechemical.com/blog/index.html" class="nav-link" data-i18n-key="nav_contact">Blog</a></li>
           </ul>
         </nav>
 
